{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 49,
  "lineage": "d940de6e-4369-c72b-b3c6-922f53607c95",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-01T18:04:31.808-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-017/global/firewalls/allow-http-port",
            "log_config": [],
            "name": "allow-http-port",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc",
            "params": [],
            "priority": 1000,
            "project": "kkgcplabs01-017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/firewalls/allow-http-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-01T18:04:31.781-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-017/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc",
            "params": [],
            "priority": 1000,
            "project": "kkgcplabs01-017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/zones/us-central1-a/disks/public-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-01T18:04:56.366-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/kkgcplabs01-017/zones/us-central1-a/instances/public-vm",
            "instance_id": "2463905269143566247",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIIwXlZvKfD3mC6PFM6jAGPpOmf3+8nNXmjVuCdqhlBjP your_email@example.com\n"
            },
            "metadata_fingerprint": "Rx5gTpc2prg=",
            "name": "public-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.112.59.181",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "kkgcplabs01-017"
              }
            ],
            "project": "kkgcplabs01-017",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/zones/us-central1-a/instances/public-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kkgcplabs01-017/global/networks/demo-vpc",
            "mtu": 0,
            "name": "demo-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2139746701286832075",
            "numeric_id": "2139746701286832075",
            "project": "kkgcplabs01-017",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T18:04:32.569-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/kkgcplabs01-017/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc",
            "project": "kkgcplabs01-017",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/regions/us-central1/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "kkgcplabs01-017/us-central1/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "kkgcplabs01-017",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/kkgcplabs01-017/regions/us-central1/subnetworks/private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T18:04:32.379-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/kkgcplabs01-017/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kkgcplabs01-017",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5091094200980862943
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T18:04:32.350-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/kkgcplabs01-017/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/global/networks/demo-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kkgcplabs01-017",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-017/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8116699846976731103
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}